deploy: e657a6f72d5567b1c814c43bc756dc12c1b8c1b6

--- a/evlib/Home.html
+++ b/evlib/Home.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html" class="active"><strong aria-hidden="true">8.</strong> Evlib</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html" class="active"><strong aria-hidden="true">8.</strong> Evlib</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../evlib/Robot-Configuration.html"><strong aria-hidden="true">8.1.</strong> Robot Configuration</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -136,43 +136,43 @@
                     <main>
                         <p>Welcome to the EVLib wiki!</p>
 <p>EVLib is designed to assist in the development of very powerful FTC autonomous programs. It provides helper mechanisms for a variety of hardware, like servo speed control.</p>
-<p>For starters, check [[this page|Importing Into Your Project]] for instructions on importing into your project.</p>
+<p>For starters, check <a href="Importing-Into-Your-Project.html">this page</a> for instructions on importing into your project.</p>
 <h2 id="features"><a class="header" href="#features">Features</a></h2>
 <p>EVLib includes the <a href="https://github.com/FTC7393/state-machine-framework/wiki">state-machine-framework</a>, so all the features of the state-machine-framework can be used from EVLib.</p>
 <ul>
-<li>[[robot configuration|Robot Configuration]]</li>
-<li>[[the Motor interfaces|Motor and MotorEnc]]</li>
-<li>[[creating motors and continuous servos|Creating Motors]]</li>
-<li>[[grouping motors|NMotors]]</li>
-<li>[[driving mecanum wheels|Mecanum Wheels]]</li>
-<li>[[control of mecanum wheels|Mecanum Control]]</li>
-<li>[[servo configuration|Servo Config]]</li>
-<li>[[servo speed control|Servo Speed Control]]</li>
-<li>[[servo presets|Servo Presets]]</li>
-<li>[[abstract opmodes|AbstractOp]]</li>
-<li>[[abstract teleop|AbstractTeleOp]]</li>
-<li>[[abstract autonomous|AbstractAutoOp]]</li>
-<li>[[tuning the servo presets|AbstractServoTuneOp]]</li>
-<li>[[selecting options for autonomous|AbstractOptionsOp]]</li>
-<li>[[gamepad button edge detection and joystick scaling|GamepadManager]]</li>
-<li>[[EVStates factory class|EVStates]]</li>
-<li>[[EVEndConditions factory class|EVEndConditions]]</li>
-<li>[[EVStateMachineBuilder|EVStateMachineBuilder]]</li>
-<li>[[analog sensors|Analog Sensors]]</li>
-<li>[[digital sensors|Digital Sensors]]</li>
-<li>[[frame grabbing with OpenCV|OpenCV Frame Grabbing]]</li>
-<li>[[image processing with OpenCV|OpenCV Image Processing]]</li>
-<li>[[line sensor|CalibratedLineSensor]]</li>
-<li>[[double line sensor|DoubleLineSensor]]</li>
-<li>[[color sensor|ColorSensor]]</li>
-<li>[[line finder|LineFinder]]</li>
-<li>[[averaging analog sensors|AveragedSensor]]</li>
-<li>[[global telemetry|Telem]]</li>
-<li>[[step timer for logging|StepTimer]]</li>
-<li>[[file utilities|FileUtil]]</li>
+<li><a href="Robot-Configuration.html">robot configuration</a></li>
+<li><a href="Motor-and-MotorEnc.html">the Motor interfaces</a></li>
+<li><a href="Creating-Motors.html">creating motors and continuous servos</a></li>
+<li><a href="NMotors.html">grouping motors</a></li>
+<li><a href="Mecanum-Wheels.html">driving mecanum wheels</a></li>
+<li><a href="Mecanum-Control.html">control of mecanum wheels</a></li>
+<li><a href="Servo-Config.html">servo configuration</a></li>
+<li><a href="Servo-Speed-Control.html">servo speed control</a></li>
+<li><a href="Servo-Presets.html">servo presets</a></li>
+<li><a href="AbstractOp.html">abstract opmodes</a></li>
+<li><a href="AbstractTeleOp.html">abstract teleop</a></li>
+<li><a href="AbstractAutoOp.html">abstract autonomous</a></li>
+<li><a href="AbstractServoTuneOp.html">tuning the servo presets</a></li>
+<li><a href="AbstractOptionsOp.html">selecting options for autonomous</a></li>
+<li><a href="GamepadManager.html">gamepad button edge detection and joystick scaling</a></li>
+<li><a href="EVStates.html">EVStates factory class</a></li>
+<li><a href="EVEndConditions.html">EVEndConditions factory class</a></li>
+<li><a href="EVStateMachineBuilder.html">EVStateMachineBuilder</a></li>
+<li><a href="Analog-Sensors.html">analog sensors</a></li>
+<li><a href="Digital-Sensors.html">digital sensors</a></li>
+<li><a href="OpenCV-Frame-Grabbing.html">frame grabbing with OpenCV</a></li>
+<li><a href="OpenCV-Image-Processing.html">image processing with OpenCV</a></li>
+<li><a href="CalibratedLineSensor.html">line sensor</a></li>
+<li><a href="DoubleLineSensor.html">double line sensor</a></li>
+<li><a href="ColorSensor.html">color sensor</a></li>
+<li><a href="LineFinder.html">line finder</a></li>
+<li><a href="AveragedSensor.html">averaging analog sensors</a></li>
+<li><a href="Telem.html">global telemetry</a></li>
+<li><a href="StepTimer.html">step timer for logging</a></li>
+<li><a href="FileUtil.html">file utilities</a></li>
 <li>[[LineSensorArray]] that uses the i2c <a href="https://www.sparkfun.com/products/13582">SparkFun Line Follower Array</a></li>
-<li>[[frame grabbing with Vuforia|Vuforia Frame Grabbing]]</li>
-<li>[[image processing with Vuforia|Vuforia and OpenCV Beacon Color Detection]]</li>
+<li><a href="Vuforia-Frame-Grabbing.html">frame grabbing with Vuforia</a></li>
+<li><a href="Vuforia-and-OpenCV-Beacon-Color-Detection.html">image processing with Vuforia</a></li>
 <li>[[Joystick Recorder]] for &quot;playback&quot; in autonomous</li>
 </ul>
 <h2 id="planned-features"><a class="header" href="#planned-features">Planned Features</a></h2>
@@ -190,6 +190,9 @@
                             <a rel="prev" href="../metaprogramming/options.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+                            <a rel="next" href="../evlib/Robot-Configuration.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -198,6 +201,9 @@
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
                     <a rel="prev" href="../metaprogramming/options.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
+                    </a>
+                    <a rel="next" href="../evlib/Robot-Configuration.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
