--- a/print.html
+++ b/print.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="evlib/Robot-Configuration.html"><strong aria-hidden="true">8.1.</strong> Robot Configuration</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -689,43 +689,43 @@ public enum AllianceColor {
 <p>The cast is necessary, without it you will have a compile error.</p>
 <div style="break-before: page; page-break-before: always;"></div><p>Welcome to the EVLib wiki!</p>
 <p>EVLib is designed to assist in the development of very powerful FTC autonomous programs. It provides helper mechanisms for a variety of hardware, like servo speed control.</p>
-<p>For starters, check [[this page|Importing Into Your Project]] for instructions on importing into your project.</p>
+<p>For starters, check <a href="evlib/Importing-Into-Your-Project.html">this page</a> for instructions on importing into your project.</p>
 <h2 id="features"><a class="header" href="#features">Features</a></h2>
 <p>EVLib includes the <a href="https://github.com/FTC7393/state-machine-framework/wiki">state-machine-framework</a>, so all the features of the state-machine-framework can be used from EVLib.</p>
 <ul>
-<li>[[robot configuration|Robot Configuration]]</li>
-<li>[[the Motor interfaces|Motor and MotorEnc]]</li>
-<li>[[creating motors and continuous servos|Creating Motors]]</li>
-<li>[[grouping motors|NMotors]]</li>
-<li>[[driving mecanum wheels|Mecanum Wheels]]</li>
-<li>[[control of mecanum wheels|Mecanum Control]]</li>
-<li>[[servo configuration|Servo Config]]</li>
-<li>[[servo speed control|Servo Speed Control]]</li>
-<li>[[servo presets|Servo Presets]]</li>
-<li>[[abstract opmodes|AbstractOp]]</li>
-<li>[[abstract teleop|AbstractTeleOp]]</li>
-<li>[[abstract autonomous|AbstractAutoOp]]</li>
-<li>[[tuning the servo presets|AbstractServoTuneOp]]</li>
-<li>[[selecting options for autonomous|AbstractOptionsOp]]</li>
-<li>[[gamepad button edge detection and joystick scaling|GamepadManager]]</li>
-<li>[[EVStates factory class|EVStates]]</li>
-<li>[[EVEndConditions factory class|EVEndConditions]]</li>
-<li>[[EVStateMachineBuilder|EVStateMachineBuilder]]</li>
-<li>[[analog sensors|Analog Sensors]]</li>
-<li>[[digital sensors|Digital Sensors]]</li>
-<li>[[frame grabbing with OpenCV|OpenCV Frame Grabbing]]</li>
-<li>[[image processing with OpenCV|OpenCV Image Processing]]</li>
-<li>[[line sensor|CalibratedLineSensor]]</li>
-<li>[[double line sensor|DoubleLineSensor]]</li>
-<li>[[color sensor|ColorSensor]]</li>
-<li>[[line finder|LineFinder]]</li>
-<li>[[averaging analog sensors|AveragedSensor]]</li>
-<li>[[global telemetry|Telem]]</li>
-<li>[[step timer for logging|StepTimer]]</li>
-<li>[[file utilities|FileUtil]]</li>
+<li><a href="evlib/Robot-Configuration.html">robot configuration</a></li>
+<li><a href="evlib/Motor-and-MotorEnc.html">the Motor interfaces</a></li>
+<li><a href="evlib/Creating-Motors.html">creating motors and continuous servos</a></li>
+<li><a href="evlib/NMotors.html">grouping motors</a></li>
+<li><a href="evlib/Mecanum-Wheels.html">driving mecanum wheels</a></li>
+<li><a href="evlib/Mecanum-Control.html">control of mecanum wheels</a></li>
+<li><a href="evlib/Servo-Config.html">servo configuration</a></li>
+<li><a href="evlib/Servo-Speed-Control.html">servo speed control</a></li>
+<li><a href="evlib/Servo-Presets.html">servo presets</a></li>
+<li><a href="evlib/AbstractOp.html">abstract opmodes</a></li>
+<li><a href="evlib/AbstractTeleOp.html">abstract teleop</a></li>
+<li><a href="evlib/AbstractAutoOp.html">abstract autonomous</a></li>
+<li><a href="evlib/AbstractServoTuneOp.html">tuning the servo presets</a></li>
+<li><a href="evlib/AbstractOptionsOp.html">selecting options for autonomous</a></li>
+<li><a href="evlib/GamepadManager.html">gamepad button edge detection and joystick scaling</a></li>
+<li><a href="evlib/EVStates.html">EVStates factory class</a></li>
+<li><a href="evlib/EVEndConditions.html">EVEndConditions factory class</a></li>
+<li><a href="evlib/EVStateMachineBuilder.html">EVStateMachineBuilder</a></li>
+<li><a href="evlib/Analog-Sensors.html">analog sensors</a></li>
+<li><a href="evlib/Digital-Sensors.html">digital sensors</a></li>
+<li><a href="evlib/OpenCV-Frame-Grabbing.html">frame grabbing with OpenCV</a></li>
+<li><a href="evlib/OpenCV-Image-Processing.html">image processing with OpenCV</a></li>
+<li><a href="evlib/CalibratedLineSensor.html">line sensor</a></li>
+<li><a href="evlib/DoubleLineSensor.html">double line sensor</a></li>
+<li><a href="evlib/ColorSensor.html">color sensor</a></li>
+<li><a href="evlib/LineFinder.html">line finder</a></li>
+<li><a href="evlib/AveragedSensor.html">averaging analog sensors</a></li>
+<li><a href="evlib/Telem.html">global telemetry</a></li>
+<li><a href="evlib/StepTimer.html">step timer for logging</a></li>
+<li><a href="evlib/FileUtil.html">file utilities</a></li>
 <li>[[LineSensorArray]] that uses the i2c <a href="https://www.sparkfun.com/products/13582">SparkFun Line Follower Array</a></li>
-<li>[[frame grabbing with Vuforia|Vuforia Frame Grabbing]]</li>
-<li>[[image processing with Vuforia|Vuforia and OpenCV Beacon Color Detection]]</li>
+<li><a href="evlib/Vuforia-Frame-Grabbing.html">frame grabbing with Vuforia</a></li>
+<li><a href="evlib/Vuforia-and-OpenCV-Beacon-Color-Detection.html">image processing with Vuforia</a></li>
 <li>[[Joystick Recorder]] for &quot;playback&quot; in autonomous</li>
 </ul>
 <h2 id="planned-features"><a class="header" href="#planned-features">Planned Features</a></h2>
@@ -735,6 +735,74 @@ public enum AllianceColor {
 <li>[[Position Tracker]] to read encoders for position info and return to a set location after driving</li>
 </ul>
 <p>This project depends on our <a href="https://github.com/FTC7393/state-machine-framework/">state-machine-framework</a> library. Click <a href="https://github.com/FTC7393/state-machine-framework/wiki">here</a> for the state-machine-framework wiki.</p>
+<div style="break-before: page; page-break-before: always;"></div><p>Before you write an OpMode using the EVLib, you have to make a class that will retrieve the devices (such as motors, servos, and sensors) from the hardwareMap.</p>
+<p>Here is an example of this configuration class:</p>
+<p><a href="https://github.com/FTC7393/EVLib/blob/master/sample/v1/SampleRobotCfg.java">/sample/v1/SampleRobotCfg.java</a></p>
+<pre><code class="language-java">package org.firstinspires.ftc.teamcode.sample.v1;
+
+import com.qualcomm.robotcore.hardware.HardwareMap;
+
+import ftc.electronvolts.util.units.Distance;
+import ftc.electronvolts.util.units.Time;
+import ftc.electronvolts.util.units.Velocity;
+import ftc.evlib.hardware.config.RobotCfg;
+import ftc.evlib.hardware.motors.Motors;
+import ftc.evlib.hardware.motors.TwoMotors;
+
+/**
+ * This file was made by the electronVolts, FTC team 7393
+ * Date Created: 10/18/16
+ *
+ * A basic configuration of a robot with 2 motors, and nothing else.
+ * Its purpose is to make the same configuration available to multiple opmodes.
+ */
+
+public class SampleRobotCfg extends RobotCfg {
+    /**
+     * the speed of the robot at 100% power
+     * you should replace this with a measured value
+     */
+    private static final Velocity MAX_SPEED = new Velocity(Distance.fromInches(50), Time.fromSeconds(5));
+
+    /**
+     * the drive motors of the robot
+     */
+    private final TwoMotors twoMotors;
+
+    public SampleRobotCfg(HardwareMap hardwareMap) {
+        super(hardwareMap);
+
+        // create the twoMotors object
+        twoMotors = new TwoMotors(
+                //get the left and right motors and wrap it with the EVLib Motor interface
+                Motors.withoutEncoder(hardwareMap, &quot;leftMotor&quot;, false, true, stoppers),
+                Motors.withoutEncoder(hardwareMap, &quot;rightMotor&quot;, true, true, stoppers),
+                false, //true for speed mode, false for power mode
+                MAX_SPEED
+        );
+    }
+
+    /**
+     * gives the opmodes access to the drive motors
+     *
+     * @return the drive motors
+     */
+    public TwoMotors getTwoMotors() {
+        return twoMotors;
+    }
+
+    @Override
+    public void act() {
+
+    }
+
+    @Override
+    public void stop() {
+
+    }
+}
+</code></pre>
+<p>The next step is to bring the robot to life with a [[Basic TeleOp Program]]</p>
 
                     </main>
 
