--- a/evlib/Robot-Configuration.html
+++ b/evlib/Robot-Configuration.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>The ElectronVolts Library - FTC Programming with ElectronVolts</title>
+        <title>Robot Configuration - FTC Programming with ElectronVolts</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html" class="active"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../evlib/Robot-Configuration.html"><strong aria-hidden="true">8.1.</strong> Robot Configuration</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro/index.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/setup.html"><strong aria-hidden="true">1.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="../intro/ftc_framework.html"><strong aria-hidden="true">1.2.</strong> The FTC Framework</a></li><li class="chapter-item expanded "><a href="../intro/evlib.html"><strong aria-hidden="true">1.3.</strong> The ElectronVolts Library</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Starting Out</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/index.html"><strong aria-hidden="true">2.1.</strong> A Starter Program</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../starter/program/config.html"><strong aria-hidden="true">2.1.1.</strong> Robot Config</a></li><li class="chapter-item expanded "><a href="../starter/program/tele_op.html"><strong aria-hidden="true">2.1.2.</strong> TeleOp Program</a></li><li class="chapter-item expanded "><a href="../starter/program/install.html"><strong aria-hidden="true">2.1.3.</strong> Compile and Install</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Operation Mode Primer</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Auto Primer</div></li></ol></li><li class="chapter-item expanded "><a href="../opmodes/index.html"><strong aria-hidden="true">3.</strong> Operation Modes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../opmodes/base.html"><strong aria-hidden="true">3.1.</strong> Base Operation Mode</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> The State Machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Hardware</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Version Control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Metaprogramming</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Logger</div></li><li class="chapter-item expanded "><a href="../metaprogramming/options.html"><strong aria-hidden="true">7.2.</strong> Setting Options</a></li></ol></li><li class="chapter-item expanded "><a href="../evlib/Home.html"><strong aria-hidden="true">8.</strong> Evlib</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../evlib/Robot-Configuration.html" class="active"><strong aria-hidden="true">8.1.</strong> Robot Configuration</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Dependencies</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -134,40 +134,81 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="the-electronvolts-library"><a class="header" href="#the-electronvolts-library">The ElectronVolts Library</a></h1>
-<h4 id="what-it-is"><a class="header" href="#what-it-is">What it is:</a></h4>
-<ul>
-<li>A tool for writing FTC code faster</li>
-<li>Classes containing boilerplate code</li>
-<li>What this book is trying to get you to use</li>
-</ul>
-<h4 id="what-it-isnt"><a class="header" href="#what-it-isnt">What it isn't:</a></h4>
-<ul>
-<li>Magic</li>
-<li>Required</li>
-</ul>
-<p>The ElectronVolts library is some code on top of the Qualcomm framework, allowing you to write your code in a stable way. However, learning <em>yet another</em> library is pretty difficult, and if the FTC library suits your purposes, it's what you should stick with. Evlib contains helpful stuff, but it only helps if used correctly. But if you struggle with these problems:</p>
-<ul>
-<li>Value fudging</li>
-<li>Untraceable logic</li>
-<li>Not knowing what's going on</li>
-<li>Insanity</li>
-</ul>
-<p>TODO: Add concrete example of a problem</p>
-<p>Maybe this library is a good fit for you. If you find it isn't, then you should stop and read the FTC provided documentation instead.</p>
-<h2 id="library-structure"><a class="header" href="#library-structure">Library Structure</a></h2>
-<p>The library is split up into two parts: <code>electronvolts</code> and <code>evlib</code>. The <code>electronvolts</code> code consists of helper classes which are used to make <code>evlib</code>, which is the part of the library you will be using most often. Regardless of what you use, you will need to download both and put them inside the same directory.</p>
-<p>In the previous tutorial, you saw the <code>LinearOpMode</code>. There are many others that Qualcomm provides, and can be used along with the ElectronVolts library, but the ElectronVolts library contains its own, preferred Operation Modes, which you will see in the next chapter.</p>
+                        <p>Before you write an OpMode using the EVLib, you have to make a class that will retrieve the devices (such as motors, servos, and sensors) from the hardwareMap.</p>
+<p>Here is an example of this configuration class:</p>
+<p><a href="https://github.com/FTC7393/EVLib/blob/master/sample/v1/SampleRobotCfg.java">/sample/v1/SampleRobotCfg.java</a></p>
+<pre><code class="language-java">package org.firstinspires.ftc.teamcode.sample.v1;
+
+import com.qualcomm.robotcore.hardware.HardwareMap;
+
+import ftc.electronvolts.util.units.Distance;
+import ftc.electronvolts.util.units.Time;
+import ftc.electronvolts.util.units.Velocity;
+import ftc.evlib.hardware.config.RobotCfg;
+import ftc.evlib.hardware.motors.Motors;
+import ftc.evlib.hardware.motors.TwoMotors;
+
+/**
+ * This file was made by the electronVolts, FTC team 7393
+ * Date Created: 10/18/16
+ *
+ * A basic configuration of a robot with 2 motors, and nothing else.
+ * Its purpose is to make the same configuration available to multiple opmodes.
+ */
+
+public class SampleRobotCfg extends RobotCfg {
+    /**
+     * the speed of the robot at 100% power
+     * you should replace this with a measured value
+     */
+    private static final Velocity MAX_SPEED = new Velocity(Distance.fromInches(50), Time.fromSeconds(5));
+
+    /**
+     * the drive motors of the robot
+     */
+    private final TwoMotors twoMotors;
+
+    public SampleRobotCfg(HardwareMap hardwareMap) {
+        super(hardwareMap);
+
+        // create the twoMotors object
+        twoMotors = new TwoMotors(
+                //get the left and right motors and wrap it with the EVLib Motor interface
+                Motors.withoutEncoder(hardwareMap, &quot;leftMotor&quot;, false, true, stoppers),
+                Motors.withoutEncoder(hardwareMap, &quot;rightMotor&quot;, true, true, stoppers),
+                false, //true for speed mode, false for power mode
+                MAX_SPEED
+        );
+    }
+
+    /**
+     * gives the opmodes access to the drive motors
+     *
+     * @return the drive motors
+     */
+    public TwoMotors getTwoMotors() {
+        return twoMotors;
+    }
+
+    @Override
+    public void act() {
+
+    }
+
+    @Override
+    public void stop() {
+
+    }
+}
+</code></pre>
+<p>The next step is to bring the robot to life with a [[Basic TeleOp Program]]</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../intro/ftc_framework.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../evlib/Home.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
-                            </a>
-                            <a rel="next" href="../starter/program/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
                     </nav>
@@ -175,11 +216,8 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../intro/ftc_framework.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../evlib/Home.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
-                    </a>
-                    <a rel="next" href="../starter/program/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
